[gd_scene load_steps=11 format=2]

[ext_resource path="res://UI/tent/buttons/knight_spawn_button.png" type="Texture" id=1]
[ext_resource path="res://UI/tent/white hue.png" type="Texture" id=2]
[ext_resource path="res://UI/tent/food_image.png" type="Texture" id=3]
[ext_resource path="res://UI/tent/gold_image.png" type="Texture" id=4]
[ext_resource path="res://misc/Text_theme.tres" type="Theme" id=5]
[ext_resource path="res://UI/tent/Spawn_button.gd" type="Script" id=6]
[ext_resource path="res://UI/tent/buttons/turn_left_vanish14.png" type="Texture" id=7]
[ext_resource path="res://UI/tent/ResourcesUngrades.gd" type="Script" id=8]
[ext_resource path="res://UI/tent/buttons/knight_spawn_button-export.png" type="Texture" id=9]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 0.478431 )

[node name="TentPopUp" type="Popup"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -397.0
margin_top = -238.0
margin_right = 397.0
margin_bottom = 238.0

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -96.0
theme = ExtResource( 5 )

[node name="Troups" type="VBoxContainer" parent="Panel/HBoxContainer"]
margin_right = 347.0
margin_bottom = 476.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="GroundTroupsScroll" type="ScrollContainer" parent="Panel/HBoxContainer/Troups"]
margin_right = 347.0
margin_bottom = 476.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ScrollContainerGround" type="VBoxContainer" parent="Panel/HBoxContainer/Troups/GroundTroupsScroll"]
margin_right = 347.0
margin_bottom = 476.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 6 )
Knight_gold_cost = 10
Knight_Food_cost = 15

[node name="SpawnKnight" type="TextureButton" parent="Panel/HBoxContainer/Troups/GroundTroupsScroll/ScrollContainerGround"]
margin_right = 347.0
margin_bottom = 236.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 2 )
expand = true

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/HBoxContainer/Troups/GroundTroupsScroll/ScrollContainerGround/SpawnKnight"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 3

[node name="TextureRect" type="TextureRect" parent="Panel/HBoxContainer/Troups/GroundTroupsScroll/ScrollContainerGround/SpawnKnight/HBoxContainer"]
margin_right = 172.0
margin_bottom = 236.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 1 )
expand = true
stretch_mode = 6

[node name="FoodMoneyVB" type="VBoxContainer" parent="Panel/HBoxContainer/Troups/GroundTroupsScroll/ScrollContainerGround/SpawnKnight/HBoxContainer"]
margin_left = 175.0
margin_right = 347.0
margin_bottom = 236.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = -49

[node name="food" type="HBoxContainer" parent="Panel/HBoxContainer/Troups/GroundTroupsScroll/ScrollContainerGround/SpawnKnight/HBoxContainer/FoodMoneyVB"]
margin_right = 172.0
margin_bottom = 142.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="FoodImage" type="TextureRect" parent="Panel/HBoxContainer/Troups/GroundTroupsScroll/ScrollContainerGround/SpawnKnight/HBoxContainer/FoodMoneyVB/food"]
margin_right = 84.0
margin_bottom = 142.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 3 )
expand = true
stretch_mode = 6

[node name="FoodCost" type="Label" parent="Panel/HBoxContainer/Troups/GroundTroupsScroll/ScrollContainerGround/SpawnKnight/HBoxContainer/FoodMoneyVB/food"]
margin_left = 88.0
margin_right = 172.0
margin_bottom = 142.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "5"
align = 1
valign = 1

[node name="money" type="HBoxContainer" parent="Panel/HBoxContainer/Troups/GroundTroupsScroll/ScrollContainerGround/SpawnKnight/HBoxContainer/FoodMoneyVB"]
margin_top = 93.0
margin_right = 172.0
margin_bottom = 236.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MoneyImage" type="TextureRect" parent="Panel/HBoxContainer/Troups/GroundTroupsScroll/ScrollContainerGround/SpawnKnight/HBoxContainer/FoodMoneyVB/money"]
margin_right = 84.0
margin_bottom = 143.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 4 )
expand = true
stretch_mode = 6

[node name="MoneyCost" type="Label" parent="Panel/HBoxContainer/Troups/GroundTroupsScroll/ScrollContainerGround/SpawnKnight/HBoxContainer/FoodMoneyVB/money"]
margin_left = 88.0
margin_right = 172.0
margin_bottom = 143.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "10"
align = 1
valign = 1

[node name="Catapult" type="VBoxContainer" parent="Panel/HBoxContainer/Troups/GroundTroupsScroll/ScrollContainerGround"]
margin_top = 240.0
margin_right = 347.0
margin_bottom = 476.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Spawn_Catapult" type="TextureButton" parent="Panel/HBoxContainer/Troups/GroundTroupsScroll/ScrollContainerGround/Catapult"]
margin_right = 347.0
margin_bottom = 236.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 2 )
expand = true

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/HBoxContainer/Troups/GroundTroupsScroll/ScrollContainerGround/Catapult/Spawn_Catapult"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 3

[node name="TextureRect" type="TextureRect" parent="Panel/HBoxContainer/Troups/GroundTroupsScroll/ScrollContainerGround/Catapult/Spawn_Catapult/HBoxContainer"]
margin_right = 172.0
margin_bottom = 236.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 9 )
expand = true
stretch_mode = 6

[node name="FoodMoneyVB" type="VBoxContainer" parent="Panel/HBoxContainer/Troups/GroundTroupsScroll/ScrollContainerGround/Catapult/Spawn_Catapult/HBoxContainer"]
margin_left = 175.0
margin_right = 347.0
margin_bottom = 236.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = -49

[node name="food" type="HBoxContainer" parent="Panel/HBoxContainer/Troups/GroundTroupsScroll/ScrollContainerGround/Catapult/Spawn_Catapult/HBoxContainer/FoodMoneyVB"]
margin_right = 172.0
margin_bottom = 142.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="FoodImage" type="TextureRect" parent="Panel/HBoxContainer/Troups/GroundTroupsScroll/ScrollContainerGround/Catapult/Spawn_Catapult/HBoxContainer/FoodMoneyVB/food"]
margin_right = 84.0
margin_bottom = 142.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 3 )
expand = true
stretch_mode = 6

[node name="FoodCost" type="Label" parent="Panel/HBoxContainer/Troups/GroundTroupsScroll/ScrollContainerGround/Catapult/Spawn_Catapult/HBoxContainer/FoodMoneyVB/food"]
margin_left = 88.0
margin_right = 172.0
margin_bottom = 142.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "5"
align = 1
valign = 1

[node name="money" type="HBoxContainer" parent="Panel/HBoxContainer/Troups/GroundTroupsScroll/ScrollContainerGround/Catapult/Spawn_Catapult/HBoxContainer/FoodMoneyVB"]
margin_top = 93.0
margin_right = 172.0
margin_bottom = 236.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MoneyImage" type="TextureRect" parent="Panel/HBoxContainer/Troups/GroundTroupsScroll/ScrollContainerGround/Catapult/Spawn_Catapult/HBoxContainer/FoodMoneyVB/money"]
margin_right = 84.0
margin_bottom = 143.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 4 )
expand = true
stretch_mode = 6

[node name="MoneyCost" type="Label" parent="Panel/HBoxContainer/Troups/GroundTroupsScroll/ScrollContainerGround/Catapult/Spawn_Catapult/HBoxContainer/FoodMoneyVB/money"]
margin_left = 88.0
margin_right = 172.0
margin_bottom = 143.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "10"
align = 1
valign = 1

[node name="Resources" type="VBoxContainer" parent="Panel/HBoxContainer"]
margin_left = 351.0
margin_right = 698.0
margin_bottom = 476.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ResourcesVBOX" type="VBoxContainer" parent="Panel/HBoxContainer/Resources"]
margin_right = 347.0
margin_bottom = 476.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ResourcesScroll" type="ScrollContainer" parent="Panel/HBoxContainer/Resources/ResourcesVBOX"]
size_flags_horizontal = 2
size_flags_vertical = 2

[node name="ResourcesVbox" type="VBoxContainer" parent="Panel/HBoxContainer/Resources/ResourcesVBOX/ResourcesScroll"]

[node name="ResourcesUngrades" type="VBoxContainer" parent="."]
anchor_left = 0.835
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 0.00994873
theme = ExtResource( 5 )
script = ExtResource( 8 )
Food_Cost = 2
Money_Cost = 2
Food_Increase = 0.25
Money_Increase = 0.5
Food_cost_increase = 2.5
Money_cost_increase = 2.5

[node name="Food" type="VBoxContainer" parent="ResourcesUngrades"]
margin_right = 131.0
margin_bottom = 236.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="ResourcesUngrades/Food"]
margin_right = 131.0
margin_bottom = 236.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 3 )
expand = true
stretch_mode = 6

[node name="foodUpgrade" type="Label" parent="ResourcesUngrades/Food/TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 0
text = "+3/s"
align = 1
valign = 1

[node name="UpgradeCost" type="Label" parent="ResourcesUngrades/Food/TextureRect"]
anchor_right = 1.0
anchor_bottom = 0.271
margin_bottom = 0.0439949
custom_colors/font_color = Color( 1, 0.901961, 0.270588, 1 )
text = "2"
align = 1
valign = 1

[node name="foodUpgradeButton" type="TextureButton" parent="ResourcesUngrades/Food/TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
texture_normal = ExtResource( 7 )
expand = true

[node name="money" type="VBoxContainer" parent="ResourcesUngrades"]
margin_top = 240.0
margin_right = 131.0
margin_bottom = 476.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="ResourcesUngrades/money"]
margin_right = 131.0
margin_bottom = 236.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 4 )
expand = true
stretch_mode = 6

[node name="foodUpgrade" type="Label" parent="ResourcesUngrades/money/TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 0
text = "+3/s"
align = 1
valign = 1

[node name="UpgradeCostMoney" type="Label" parent="ResourcesUngrades/money/TextureRect"]
anchor_right = 1.0
anchor_bottom = 0.271
margin_bottom = 0.0439949
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "2"
align = 1
valign = 1

[node name="MoneyUpgradeButton" type="TextureButton" parent="ResourcesUngrades/money/TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
texture_normal = ExtResource( 7 )
expand = true

[connection signal="button_down" from="Panel/HBoxContainer/Troups/GroundTroupsScroll/ScrollContainerGround/SpawnKnight" to="Panel/HBoxContainer/Troups/GroundTroupsScroll/ScrollContainerGround" method="_on_SpawnKnight_button_down"]
[connection signal="button_down" from="Panel/HBoxContainer/Troups/GroundTroupsScroll/ScrollContainerGround/Catapult/Spawn_Catapult" to="Panel/HBoxContainer/Troups/GroundTroupsScroll/ScrollContainerGround" method="_on_Spawn_Catapult_button_down"]
[connection signal="button_down" from="ResourcesUngrades/Food/TextureRect/foodUpgradeButton" to="ResourcesUngrades" method="_on_foodUpgradeButton_button_down"]
[connection signal="button_down" from="ResourcesUngrades/money/TextureRect/MoneyUpgradeButton" to="ResourcesUngrades" method="_on_MoneyUpgradeButton_button_down"]
